feat: config add